fixed low contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3406,7 +3406,7 @@ input, select, textarea {
 
 					#header > nav > ul > li a {
 						border: 0;
-						color: rgba(255, 255, 255, 0.35);
+						color: rgba(255, 255, 255, 0.75);
 						display: inline-block;
 						font-size: 0.6em;
 						font-weight: bold;
@@ -3415,7 +3415,7 @@ input, select, textarea {
 					}
 
 						#header > nav > ul > li a:hover {
-							color: rgba(255, 255, 255, 0.55);
+							color: rgba(255, 255, 255, 0.95);
 						}
 
 						#header > nav > ul > li a.active {
@@ -3734,7 +3734,7 @@ input, select, textarea {
 			-ms-transition: color 0.2s ease;
 			transition: color 0.2s ease;
 			border: 0;
-			color: rgba(255, 255, 255, 0.35);
+			color: rgba(255, 255, 255, 0.75);
 			display: block;
 			font-size: 0.6em;
 			font-weight: bold;
@@ -3774,7 +3774,7 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:hover {
-				color: rgba(255, 255, 255, 0.55);
+				color: rgba(255, 255, 255, 0.95);
 			}
 
 			#sidebar nav a.active {
